fix: 解决cookie可能过期的问题

--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,7 @@ build/
 ### VS Code ###
 .vscode/
 
+/target/classes/application-dev.yml
+/target/classes/application-prod.yml
 /src/main/resources/application-dev.yml
 /src/main/resources/application-prod.yml
