--- a/.github/workflows/built-and-release.yml
+++ b/.github/workflows/built-and-release.yml
@@ -14,8 +14,8 @@ jobs:
     permissions: write-all
     runs-on: ubuntu-latest
     steps:
-
-    - uses: actions/checkout@v4.1.7
+    - name: Checkout code
+      uses: actions/checkout@v4.1.7
     
     - name: Setup Java JDK
       uses: actions/setup-java@v4.2.2
@@ -38,3 +38,14 @@ jobs:
       with:
         files: ./target/electricCharge-*.jar
         tag_name: electricCharge-v1.0
+
+    - name: Log in to GitHub Docker Registry
+      run: echo "${{ secrets.CR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+    - name: Build Docker image
+      run: |
+        docker build -t ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest .
+
+    - name: Push Docker image to GitHub Packages
+      run: |
+        docker push ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest
